<?php

namespace App\Models;

class Research {
    private string $id;
    private string $title;
    private string $description;
    private \DateTime $startDate;
    private \DateTime $endDate;
    private Researcher $researcher;
    private array $relatedObjects;

    public function submitProposal(string $proposal): bool {
        // Implementation
        return true;
    }

    public function updateDetails(string $title, string $description): void {
        // Implementation
    }

    public function addRelatedObject(string $objectId): void {
        // Implementation
    }

    public function removeRelatedObject(string $objectId): void {
        // Implementation
    }

    public function getResearchDuration(): int {
        // Implementation
        return 0;
    }
} 