<?php

namespace App\Models;

class Researcher extends Member {
    private string $id;
    private array $researchProjects = [];

    public function accessResearchResources(): void {
        // Implementation
    }

    public function submitResearchProposals(string $proposal): bool {
        // Implementation
        return true;
    }

    public function scheduleResearchAppointments(\DateTime $dateTime): bool {
        // Implementation
        return true;
    }

    public function collaborateWithStaff(string $staffId): void {
        // Implementation
    }

    public function requestRestrictedAccess(string $resourceId): bool {
        // Implementation
        return true;
    }

    public function viewResearchHistory(): array {
        // Implementation
        return [];
    }

    public function addResearchProject(Research $research): void {
        $this->researchProjects[] = $research;
    }

    public function getResearchProjects(): array {
        return $this->researchProjects;
    }
} 