<?php

namespace App\Models;

class Ticket {
    private string $id;
    private string $type;
    private float $price;
    private \DateTime $validFrom;
    private \DateTime $validTo;

    public function validateTicket(): bool {
        // Implementation
        return true;
    }

    public function generateQRCode(): string {
        // Implementation
        return '';
    }
} 