<?php

namespace App\Models;

class Visitor {
    private string $id;
    private string $name;
    private string $email;
    private string $phone;
    private string $address;
    private array $feedbacks = [];
    private array $contacts = [];
    private array $donations = [];
    private array $shoppingItems = [];

    public function browseExhibits(): array {
        // Implementation
        return [];
    }

    public function viewExhibitDetails(string $exhibitId): MuseumObject {
        // Implementation
        return new MuseumObject();
    }

    public function searchExhibits(string $query): array {
        // Implementation
        return [];
    }

    public function viewToursAndEvents(): array {
        // Implementation
        return [];
    }

    public function viewDonationPrograms(): array {
        // Implementation
        return [];
    }

    public function applyAsVolunteer(string $applicationDetails): bool {
        // Implementation
        return true;
    }

    public function viewFamilyGroupVisitsInfo(): array {
        // Implementation
        return [];
    }

    public function viewMuseumMap(): array {
        // Implementation
        return [];
    }

    public function viewFoodAndDrink(): array {
        // Implementation
        return [];
    }

    public function shopSouvenirs(): array {
        // Implementation
        return [];
    }

    public function addFeedback(Feedback $feedback): void {
        $this->feedbacks[] = $feedback;
    }

    public function addContact(Contact $contact): void {
        $this->contacts[] = $contact;
    }

    public function addDonation(Donation $donation): void {
        $this->donations[] = $donation;
    }

    public function addShoppingItem(Shopping $shopping): void {
        $this->shoppingItems[] = $shopping;
    }

    public function getFeedbacks(): array {
        return $this->feedbacks;
    }

    public function getContacts(): array {
        return $this->contacts;
    }

    public function getDonations(): array {
        return $this->donations;
    }

    public function getShoppingItems(): array {
        return $this->shoppingItems;
    }

    public function viewEventDetails(string $eventId): array {
        // Implementation
        return [];
    }

    public function registerForEvent(string $eventId): void {
        // Implementation
    }

    public function viewTourDetails(string $tourId): array {
        // Implementation
        return [];
    }

    public function bookTour(string $tourId): void {
        // Implementation
    }

    public function viewTicketDetails(string $ticketId): array {
        // Implementation
        return [];
    }

    public function purchaseTicket(string $ticketId): void {
        // Implementation
    }

    public function filterExhibits(array $criteria): array {
        // Implementation
        return [];
    }

    public function viewShoppingItems(): array {
        // Implementation
        return [];
    }

    public function addToCart(string $itemId): void {
        // Implementation
    }

    public function viewCart(): array {
        // Implementation
        return [];
    }

    public function checkout(): void {
        // Implementation
    }

    public function viewMembershipPlans(): array {
        // Implementation
        return [];
    }

    public function purchaseMembership(string $planId): void {
        // Implementation
    }

    public function makeDonation(string $programId, float $amount): void {
        // Implementation
    }

    public function submitFeedback(string $feedback): void {
        // Implementation
    }

    public function contactSupport(string $message): void {
        // Implementation
    }
} 